# heptodes

./: .gitignore  .rustfmt.toml  README.md
patinon/: README.md
zebraix/crates/diag-golden/: Cargo.toml
zebraix/crates/diag-golden/src/: lib.rs
zebraix/crates/diag-golden/tests/: cairo_svg_test.rs  json_test.rs  spartan_svg_test.rs  svg_test.rs
zebraix/crates/diag-golden/tests/goldenfiles/: json_example.json  json_simple_file.json  simple_spartan.json  spartan_sizing_a.json  spartan_sizing_b.json  spartan_sizing_c.json  spartan_sizing_d.json  spartan_sizing_e.json  spartan_sizing_f.json  spartan_sizing_g.json  spartan_sizing_h.json  spartan_sizing_i.json  spartan_sizing_j.json  spartan_sizing_k.json  spartan_sizing_l.json  spartan_sizing_m.json  spartan_sizing_n.json  spartan_sizing_n1.json  spartan_sizing_o.json  spartan_sizing_o1.json  spartan_sizing_o2.json  spartan_sizing_p.json  spartan_sizing_r.json  spartan_sizing_t.json  spartan_sizing_u.json  spartan_sizing_v.json  spartan_sizing_w.json  spartan_sizing_x.json
zebraix/crates/diag-golden/tests/test-data/: simple_json_sample.json
zebraix/crates/zebraix-curve/: Cargo.toml
zebraix/crates/zebraix-curve/src/: etcetc.rs  lib.rs  managed.rs  simple.rs
zebraix/crates/zebraix-curve/tests/: spartan_svg_test.rs
zebraix/crates/zebraix-curve/tests/goldenfiles/: spartan_sizing_l.json  spartan_sizing_o.json
zebraix/crates/zebraix-splines/: Cargo.toml  README.md
zebraix/crates/zvx-base/: Cargo.toml
zebraix/crates/zvx-base/src/: lib.rs  matrix.rs  pieces.rs  utils.rs
zebraix/crates/zvx-cairo/: Cargo.toml
zebraix/crates/zvx-cairo/src/: combination.rs  lib.rs  render.rs
zebraix/crates/zvx-cairo/tests/: direct_svg_test.rs
zebraix/crates/zvx-curves/: Cargo.toml
zebraix/crates/zvx-curves/src/: base.rs  cubic.rs  lib.rs  managed.rs  matrix.rs  rat_quad.rs  threes.rs
zebraix/crates/zvx-curves/src/cubic/: managed.rs  tests.rs
zebraix/crates/zvx-curves/src/rat_quad/: managed.rs  tests.rs
zebraix/crates/zvx-curves/src/subclasses/: convert.rs  mod.rs  threes.rs
zebraix/crates/zvx-docagram/: Cargo.toml
zebraix/crates/zvx-docagram/src/: axes.rs  diagram.rs  lib.rs
zebraix/crates/zvx-drawable/: Cargo.toml
zebraix/crates/zvx-drawable/src/: choices.rs  interface.rs  kinds.rs  lib.rs
zebraix/crates/zvx-golden/: Cargo.toml  README.md
zebraix/crates/zvx-golden/src/: axes.rs  diagram.rs  filtered.rs  lib.rs  reduced.rs  render.rs
zebraix/crates/zvx-golden/tests/: cairo_svg_test.rs  json_test.rs  spartan_svg_test.rs  svg_test.rs
zebraix/crates/zvx-golden/tests/goldenfiles/: json_failure_test_data.json  json_failure_test_error.txt  json_simple_string.json
zebraix/crates/zvx-jaywalk/: Cargo.toml
zebraix/crates/zvx-jaywalk/src/: lib.rs
zebraix/crates/zvx-jaywalk/src/dominance/: conquer_iterator.rs  dominance_graph.rs  mod.rs
zebraix/crates/zvx-jaywalk/src/dominance/dominance_graph/: tests.rs
zebraix/crates/zvx-simples/: Cargo.toml
zebraix/crates/zvx-simples/src/: exemplary.rs  generate.rs  lib.rs
zebraix/crates/zvx-simples/tests/: direct_svg_test.rs  intro_diagrams.rs  spartan_svg_test.rs
zebraix/crates/zvx-simples/tests/goldenfiles/: segment_sequence_a.json  spartan_sizing_a.json  spartan_sizing_b.json  spartan_sizing_c.json  spartan_sizing_d.json  spartan_sizing_e.json  spartan_sizing_f.json  spartan_sizing_g.json  spartan_sizing_h.json  spartan_sizing_i.json  spartan_sizing_j.json  spartan_sizing_k.json  spartan_sizing_l.json  spartan_sizing_m.json  spartan_sizing_n.json  spartan_sizing_n1.json  spartan_sizing_o.json  spartan_sizing_o1.json  spartan_sizing_o2.json  spartan_sizing_p.json  spartan_sizing_q.json  spartan_sizing_r.json  spartan_sizing_s.json  spartan_sizing_t.json  spartan_sizing_u.json  spartan_sizing_v.json  spartan_sizing_w.json  spartan_sizing_x.json  spartan_sizing_y.json  spartan_sizing_z.json
zebraix/experimental/rust-sketch/: Cargo.toml  MOSTLY_MOVED_TO_SRC.txt
zebraix/experimental/rust-sketch/combined/: Cargo.toml
zebraix/experimental/rust-sketch/jaywalk-base/: Cargo.toml
zebraix/experimental/rust-sketch/jaywalk-base/src/: jaywalk_graph.rs  lib.rs
zebraix/experimental/rust-sketch/jaywalk-base/src/jaywalk_graph/: jaywalk_foundation.rs  jaywalk_traiting.rs
zebraix/experimental/rust-sketch/render-layout/: Cargo.toml
zebraix/experimental/rust-sketch/render-layout/src/: lib.rs
zebraix/experimental/rust-sketch/render-png/: Cargo.toml
zebraix/experimental/rust-sketch/render-svg/: Cargo.toml
zebraix/experimental/rust-sketch/render-svg/src/: lib.rs
zebraix/experimental/rust-sketch/test-samples/: Cargo.toml
zebraix/experimental/rust-sketch/test-samples/src/: main.rs  test-runner.rs
zebraix/experimental/rust-sketch/zebraix-proto/: Cargo.toml  build.rs
zebraix/experimental/rust-sketch/zebraix-proto/src/: lib.rs
zebraix/experimental/rust-sketch/zebraix-svg/: Cargo.toml
zebraix/experimental/rust-sketch/zebraix-svg/src/: main.rs  test.rs
zebraix/misc/wsc-itms/src/ams_demo_suite/: Cargo.toml  tmp.ps  tmp.rs
zebraix/src/drawable/: Cargo.toml
zebraix/src/drawable/src/: lib.rs
zebraix/src/drawable/src/drawable_graph/: draw_foundation.rs  draw_tests.rs  draw_traiting.rs  mod.rs
zebraix/src/test-samples/: Cargo.toml
zebraix/src/test-samples/src/: test-runner.rs
zebraix/src/test-samples/tests/golden-inputs/: sphinx.json
zebraix/src/z-graph/: Cargo.toml
zebraix/src/z-graph/src/: lib.rs  test-of-testing.rs  test-runner.rs  test-z-graph.rs
zebraix/src/z-graph/src/jaywalk_graph/: .#zgraph_machine.rs  jaywalk_foundation.rs  jaywalk_traiting.rs  mod.rs  zgraph_base.rs  zgraph_builtins.rs  zgraph_graphdef.rs  zgraph_machine.rs  zgraph_node.rs  zgraph_realizer.rs  zgraph_registry.rs  zgraph_solver.rs  zgraph_svg.rs
zebraix/src/z-graph/src/render_svg/: mod.rs
zebraix/src/z-graph/src/test_utils/: mod.rs
zebraix/src/z-graph/test-files/: README.md
zebraix/src/z-graph/test-files/golden-inputs/: aggregation_graph.json  simple_graph.json  tunnelling_graph.json
zebraix/src/zebraix-svg/: Cargo.toml
zebraix/src/zebraix-svg/src/: main.rs
(+542 files in other folders)
