[package]
name = "diag-golden"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/jalexstark/heptodes"
description = "Diagramming golden test"
keywords = ["svg", "test"]
documentation = "https://docs.rs/diag-golden"
repository = "https://github.com/jalexstark/heptodes/tree/main/zebraix/crates/diag-golden"
readme = "README.md"
license = "MIT"
categories = ["graphics","development-tools::testing"]

# [[test]]
# name = "z-graph-test-of-testing"
# path = "src/test-of-testing.rs"

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
serde_default = "0.2"
pangocairo = "0.20"
goldenfile = "1.8"
serde_json = "1.0"
derive_builder = "0.20"
testdir = "0.9"

[dev-dependencies]
# goldenfile should be here, but Rust has bugs with test-only config.

[dependencies.cairo-rs]
version =  "0.20"
features = ["svg", "v1_16"]

[dependencies.pango]
version =  "0.20"
features = ["v1_44"]

