[package]
name = "zebraix-splines"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/jalexstark/heptodes"
description = "Zebraix splines"
keywords = ["svg", "diagrams", "splines"]
documentation = "https://docs.rs/zebraix-splines"
repository = "https://github.com/jalexstark/heptodes/tree/main/zebraix/crates/zebraix-splines"
readme = "README.md"
license = "MIT"

[dependencies]
