[package]
name = "zvx-curves"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/jalexstark/heptodes"
description = "Curve handling for Zebraix"
keywords = ["svg", "test"]
documentation = "https://docs.rs/zvx-curves"
repository = "https://github.com/jalexstark/heptodes/tree/main/zebraix/crates/zvx-curves"
readme = "README.md"
license = "MIT"
categories = ["graphics", "development-tools::testing"]

[dependencies]
approx = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_default = "0.2"
zvx-base =  { path = "../zvx-base", version = "0.1" }

[dev-dependencies]
