[package]
name = "zvx-golden"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/jalexstark/heptodes"
description = "Diagramming golden test"
keywords = ["svg", "test"]
documentation = "https://docs.rs/zvx-golden"
repository = "https://github.com/jalexstark/heptodes/tree/main/zebraix/crates/zvx-golden"
readme = "README.md"
license = "MIT"
categories = ["graphics", "development-tools::testing"]

[dependencies]
goldenfile = "1.8"
regex = "1.11"
serde_json = "1.0"
testdir = "0.9"

[dev-dependencies]
pangocairo = "0.20"

[package.metadata.cargo-machete]
ignored = ["cairo-rs"]

[dev-dependencies.cairo-rs]
version =  "0.20"
features = ["svg", "v1_16"]

[dev-dependencies.pango]
version =  "0.20"
features = ["v1_44"]
