[package]
name = "z-graph"
version = "0.1.0"
authors = ["Alex Stark <alex@withheld.org>"]
edition = "2021"

[[test]]
name = "z-graph-test-runner"
path = "src/test-runner.rs"

[dependencies]
regex = "1.5"
serde = { version = "1.0", features = ["derive"]}
# z-base = {version= "0.1.0", path = "../z-base"}
json5 = "0.4.1"
serde_default = "0.1.0"
pangocairo = "0.15"

# [dependencies.z-render]
# version =  "0.1.0"
# path = "../z-render"

[dev-dependencies]
goldenfile = "1.1"

[dependencies.cairo-rs]
version =  "0.15.0"
features = ["svg"]

[dependencies.pango]
version =  "0.15.0"
