[package]
name = "z-graph"
version = "0.1.0"
authors = ["Alex Stark <alex@withheld.org>"]
edition = "2021"

[[test]]
name = "z-graph-test-of-testing"
path = "src/test-of-testing.rs"

[[test]]
name = "z-graph-test-z-graph"
path = "src/test-z-graph.rs"

[dependencies]
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
serde_default = "0.1"
pangocairo = "0.16"
goldenfile = "1.1"

[dev-dependencies]
# goldenfile should be here, but Rust has bugs with test-only config.

[dependencies.cairo-rs]
version =  "0.16.0"
features = ["svg", "v1_16"]

[dependencies.pango]
version =  "0.16.0"
