[package]
name = "zebraix-svg"
version = "0.1.0"
authors = ["Alex Stark <alex@withheld.org>"]
edition = "2021"

[dependencies]
pangocairo = "0.16"
getopts = "0.2"

[dependencies.cairo-rs]
version =  "0.16"
features = ["svg"]

[dependencies.pango]
version =  "0.16"

[dependencies.render-svg]
version =  "0.1.0"
path = "../render-svg"
