[package]
name = "jaywalk-base"
version = "0.1.0"
authors = ["Alex Stark <alex@withheld.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde_json = { version = "1.0"}
# serde_derive = { version = "1.0"}
serde = { version = "1.0", features = ["derive"]}
json5 = "0.4.1"
serde_default = "0.1.0"