[package]
name = "render-svg"
version = "0.1.0"
authors = ["Alex Stark <alex@withheld.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pangocairo = "0.10"
# cairo = "0.10"
# cairo-rs = { version = "0.9.0", features = ["svg"] }


# [features]
# default = ["svg"]

# [dependencies.pangocairo]
# version =  "0.10.0"
# # features = ["svg"]

[dependencies.cairo-rs]
version =  "0.9.0"
features = ["svg"]

[dependencies.pango]
version =  "0.9.0"

[dependencies.zebraix-proto]
version =  "0.1.0"
path = "../zebraix-proto"

[dev-dependencies]
goldenfile = "1.1"
