[package]
name = "test-samples"
version = "0.1.0"
authors = ["Alex Stark <alex@withheld.org>"]
edition = "2018"
# autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "test-samples-runner"
path = "src/test-runner.rs"

[dependencies]
regex = "1.5"
zebraix-proto = {version= "0.1.0", path = "../zebraix-proto"}
jaywalk-base = {version= "0.1.0", path = "../jaywalk-base"}
json5 = "0.4.1"

[dependencies.render-svg]
version =  "0.1.0"
path = "../render-svg"

[dev-dependencies]
goldenfile = "1.1"

# [dependencies.cairo-rs]
# version =  "0.9.0"
# features = ["svg"]
