[package]
name = "ams-demo-package"
version = "0.1.0"
license = "LicenseRef-AMS-license"      # Placeholder, to quieten cargo-deny.
authors = ["Alex Stark <alex@withheld.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
permutohedron = "0.2.4"
factorial = "0.2.1"
shuffle = "0.1.7"
rand = "0.8.4"
rand_pcg = "0.3.1"
goldenfile = "1.1"

[[test]]
name = "test-runner"
path = "tests/test-ams.rs"

# [dependencies.render-svg]
# version =  "0.1.0"
# path = "../render-svg"

# [dev-dependencies]

